--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pycitydata"
-version = "1.0.3"
+version = "1.0.4"
 description = "City Data Python SDK"
 authors = ["Jun Zhang <zhangjun990222@qq.com>"]
 license = "MIT"
@@ -26,7 +26,7 @@ requests = ">=2.27.0"
 scipy = ">=1.7.0"
 geopandas = ">=0.9.0"
 pillow = ">=10.0.0"
-opencv-python = ">=4.8.0.0"
+opencv-python-headless = ">=4.8.0.0"
 lru-dict = ">=1.3.0"
 stringcase = "^1.2.0"
 
